--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.11.2",
     "@syncfusion/ej2-react-calendars": "^19.3.46",
     "@trendmicro/react-sidenav": "^0.5.0",
+    "@trendmicro/react-breadcrumbs",
     "antd": "^4.16.13",
     "awesome-react-icons": "^1.4.8",
     "axios": "^0.24.0",
