--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,10 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@syncfusion/ej2-react-calendars": "^19.3.46",
-    "@trendmicro/react-sidenav": "^0.5.0",
-    "@trendmicro/react-breadcrumbs",
-    "antd": "^4.16.13",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "antd": "^4.17.2",
     "awesome-react-icons": "^1.4.8",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
@@ -23,8 +24,8 @@
     "es6": "^0.0.7",
     "firebase": "^8.3.1",
     "lodash": "^4.17.21",
-    "mdb-react-ui-kit": "^2.0.0",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
@@ -33,12 +34,13 @@
     "react-minimal-side-navigation": "^1.9.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-script": "^2.0.5",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "reactstrap": "^8.10.0",
+    "sass": "^1.44.0",
+    "sass-loader": "^12.3.0",
+    "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
-    "tslib": "^2.3.1",
-    "web-vitals": "^1.0.1"
+    "tslib": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
