--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,23 @@
   "description": "back-end ",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.14",
-    "socket.io": "^4.4.0"
+    "nodemon": "^2.0.15",
+    "socket.io": "^4.1.2"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node index.js",
-    "devStart": "nodemon index.js",
+    "start": "nodemon index.js",
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
